WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129929
input event doesn't fire when <input type=range> value is changed by pressing the keyboard arrows
https://bugs.webkit.org/show_bug.cgi?id=129929
Summary
input event doesn't fire when <input type=range> value is changed by pressing...
Lorenzo Tilve
Reported
2014-03-07 15:14:40 PST
The 'input' event is fired when moving the slider with the mouse, but it's not when using the keyboard. The 'change' event is properly sent in both cases. It can be tested here
http://jsfiddle.net/ltilve/T8767/
The behaviour should be the same with independence of the device, dispatching the 'input' event in both cases. Is the same issue reported at
https://crbug.com/345611
Attachments
Patch
(5.58 KB, patch)
2014-03-07 15:38 PST
,
Lorenzo Tilve
no flags
Details
Formatted Diff
Diff
Patch
(5.59 KB, patch)
2014-03-18 16:06 PDT
,
Lorenzo Tilve
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Lorenzo Tilve
Comment 1
2014-03-07 15:38:47 PST
Created
attachment 226175
[details]
Patch
Zan Dobersek
Comment 2
2014-03-18 12:26:07 PDT
Comment on
attachment 226175
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=226175&action=review
> Source/WebCore/html/RangeInputType.cpp:241 > - TextFieldEventBehavior eventBehavior = DispatchChangeEvent; > + TextFieldEventBehavior eventBehavior = DispatchInputAndChangeEvent; > setValueAsDecimal(newValue, eventBehavior, IGNORE_EXCEPTION);
DispatchInputAndChangeEvent can be inlined directly into the setValueAsDecimal() call.
Lorenzo Tilve
Comment 3
2014-03-18 16:06:12 PDT
Created
attachment 227126
[details]
Patch Applied suggested modification
WebKit Commit Bot
Comment 4
2014-03-20 01:57:08 PDT
Comment on
attachment 227126
[details]
Patch Clearing flags on attachment: 227126 Committed
r165954
: <
http://trac.webkit.org/changeset/165954
>
WebKit Commit Bot
Comment 5
2014-03-20 01:57:11 PDT
All reviewed patches have been landed. Closing bug.
Lucas Forschler
Comment 6
2019-02-06 09:18:41 PST
Mass move bugs into the DOM component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug