Dispatch input event for Range element keyboard event https://bugs.webkit.org/show_bug.cgi?id=129929

Patch by Lorenzo Tilve <ltilve@igalia.com> on 2014-03-20
Reviewed by Kent Tamura.

For any value update, dispatch both input and change event.
Also removes extra dispatch change event, as event is dispatched
from TextFieldInputType:setValue.

Merged from Blink (patch by Habib Virji):
https://src.chromium.org/viewvc/blink?revision=168558&view=revision

Source/WebCore:

Test: fast/forms/range/range-keyboard-oninput-event.html

* html/RangeInputType.cpp:
(WebCore::RangeInputType::handleKeydownEvent):

LayoutTests:

* fast/forms/range/range-keyboard-oninput-event-expected.txt: Added.
* fast/forms/range/range-keyboard-oninput-event.html: Added.

Canonical link: https://commits.webkit.org/148499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165954 268f45cc-cd09-0410-ab3c-d52691b4dbfc